app icon layout bug

--- a/styles/project/_react-conversion-calc.scss
+++ b/styles/project/_react-conversion-calc.scss
@@ -47,6 +47,7 @@
         &--small {
             width: 109px;
             height: 109px;
+            border-radius: 20px;
         }
     }
     &__sidebar {
